--- a/ipsec_secrets.j2
+++ b/ipsec_secrets.j2
@@ -1,6 +1,1 @@
-{% if ( siteA_gateway_public_ip in ansible_all_ipv4_addresses) %}
-{{ siteA_gateway_public_ip }} {{ siteB_gateway_public_ip }} : PSK "{{ vpn_psk }}"
-{% endif %}
-{% if ( siteB_gateway_public_ip in ansible_all_ipv4_addresses ) %}
-{{ siteB_gateway_public_ip }} {{ siteA_gateway_public_ip }} : PSK "{{ vpn_psk }}"
-{% endif %}
+{{ hostvars[inventory_hostname]['inventory_hostname'] }} {{ remote_gateway }} : PSK "{{ vpn_psk }}"
