--- a/strongswan_secrets.j2
+++ b/strongswan_secrets.j2
@@ -1,1 +1,1 @@
-{{ hostvars[inventory_hostname]['inventory_hostname'] }} {{ remote_gateway }} : PSK "{{ vpn_psk }}"
+{{ ansible_host }} {{ remote_gateway }} : PSK "{{ vpn_psk }}"
