netplan on clients

--- a/updown_sh.j2
+++ b/updown_sh.j2
@@ -2,5 +2,8 @@
  
 case "${PLUTO_VERB}" in
     up-client)
+    {% for item in clients_private_ip %}
+        ip route add {{ item }} dev {{ private_interface }} src {{ private_ip }} table 220
+    {% endfor %}
         ;;
 esac
